# rocksmith_plus

./: README.md  README.rst  index.html  pyproject.toml  queries.js  queries.txt
rocksmith_plus_songs/: Driver.py  index.py  main.py
rocksmith_plus_songs/elements/: loading.html
rocksmith_plus_songs/pages/: ArtistPage.py  LetterPage.py  PagesUrl.py  RocksmithPage.py
tests/: test_rocksmith_plus_songs.py
