[tool.poetry]
name = "rocksmith_plus_songs"
version = "0.1.0"
description = ""
authors = ["brunobarros <1232097@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"
PyVirtualDisplay = "^3.0"
bba-playlist = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
